<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/layout1"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:text="@string/app"
        android:textStyle="bold"
        android:textColor="@color/design_default_color_error"
        android:textSize="40sp"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginBottom="-60dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:gravity="center"
        android:backgroundTint="@color/design_default_color_background"
        android:background="@drawable/layouyt2"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/First"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/material_dynamic_neutral0"
            android:layout_height="wrap_content"/>
        <EditText
            android:layout_marginBottom="10dp"
            android:id="@+id/et1"
            android:layout_width="wrap_content"
            android:inputType="number"
            android:textAlignment="center"
            android:ems="10"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:hint="@string/ed1"
            android:layout_height="50dp"
            android:autofillHints="" />
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/Second"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/material_dynamic_neutral0"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/et2"
            android:layout_width="wrap_content"
            android:inputType="numberDecimal"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:ems="10"
            android:hint="@string/ed2"
            android:textStyle="bold"
            android:layout_height="50dp"
            android:autofillHints="" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@drawable/layout1"
        android:orientation="vertical"
        android:padding="5dp"
        android:weightSum="1">

    </LinearLayout>

   <LinearLayout
       android:layout_width="match_parent"
       android:orientation="vertical"
       android:gravity="center"
       android:background="@color/material_dynamic_primary70"
       android:layout_height="wrap_content">

        <Button
            android:layout_margin="10dp"
            android:id="@+id/bt1"
            android:layout_width="wrap_content"
            android:text="@string/sum"
            android:layout_height="wrap_content"/>


        <Button
            android:id="@+id/bt2"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub" />

        <Button
            android:layout_margin="10dp"
            android:id="@+id/bt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mul" />
        <Button
            android:layout_margin="5dp"
            android:id="@+id/bt4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/div" />
       <TextView

           android:textSize="20sp"
           android:layout_marginTop="10dp"
           android:layout_marginBottom="20dp"
           android:textAlignment="center"
           android:textStyle="bold"
           android:text="Ans of this Operation "
           android:textColor="@android:color/black"
           android:layout_width="match_parent"
           android:layout_height="match_parent"/>
       <TextView
           android:id="@+id/tv1"
           android:textSize="40sp"
           android:textAlignment="center"
           android:textStyle="bold"

           android:textColor="@android:color/black"
           android:layout_width="match_parent"
           android:layout_height="match_parent"/>
    </LinearLayout>

</LinearLayout>

